finally fixed the grid gap issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,7 @@
 html {
   scroll-behavior: smooth;
 }
-.section-recent,
-.section-popular,
-.section-topairing,
-.section-trending {
-  margin-top: 25px;
-}
+
 * {
   box-sizing: border-box;
 }
@@ -17,68 +12,6 @@ body {
   max-width: 100vw;
 }
 
-button.rec-dot {
-  background-color: #3f1e26;
-}
 
 
 
-button.rec-dot:hover,
-button.rec-dot:active,
-button.rec-dot:focus {
-  background-color: #fc4747;
-}
-
-@media screen and (max-width: 1770px) {
-  .animecard-wrapper {
-    transform: scale(0.9);
-    transition: 5ms ease-in;
-  }
-  .animecard-wrapper div {
-    transform: scale(0.9);
-    transition: 2ms ease;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .gridcard-wrapper,
-  .gridcard-wrapper div {
-    transform: scale(0.75);
-  }
-}
-
-@media screen and (max-width: 1450px) {
-  .animecard-wrapper {
-    transform: scale(0.85);
-  }
-  .animecard-wrapper div {
-    transform: scale(0.85);
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .animecard-wrapper:not(.section-trending .animecard-wrapper) {
-    transform: scale(0.8);
-  }
-  .animecard-wrapper div:not(.section-trending .animecard-wrapper div) {
-    transform: scale(0.8);
-  }
-
-  .animecard-wrapper {
-    transform: scale(0.73);
-  }
-
-  .animecard-wrapper div {
-    transform: scale(0.73);
-  }
-}
-
-.grid-card-title {
-  text-align: center;
-}
-
-.animecard-wrapper:hover,
-.gridcard-wrapper:hover {
-  transform: scale(1.03);
-  transition: 150ms ease;
-}
